syntax = "proto3";

message InitializeRequest {
  string client_id = 1;
  bytes prf_input = 2;
}

message InitializeResponse {
  //enum Status {
  //  OK = 0;
  //  ERR = 1;
  //}
  //Status status = 1;
  
  bytes public_key = 1;
  bytes prf_output = 2;
}